[package]
keywords = ["finite", "field", "isogeny", "isogenies"]
name = "fp2"
version = "0.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["cryptography"]
authors = ["Giacomo Pope <giacomopope@gmail.com>"]
description = "An efficient, flexible and constant time Rust implementation of the extension field Fp^2 with modulus x^2 + 1"
homepage = "https://github.com/GiacomoPope/fp2/"
repository = "https://github.com/GiacomoPope/fp2/"
readme = "README.md"

[features]
default = ["test-utils"]
test-utils = []

[dependencies]
rand_core = "0.9"

[dev-dependencies]
criterion = { version = "0.5" }
sha2 = "0.10.2"
num-bigint = "0.4.3"

[[bench]]
name = "benchmark_fp2"
path = "benches/fp2_bench.rs"
harness = false
